style.css
@import url("https://fonts.googleapis.com/css?family=Raleway");

:root {
  --shadow-color: rgb(68, 68, 68);
}

body {
  /* overflow: hidden; */
  background: linear-gradient(
    -45deg,
    #569282,
    #6b9fb7,
    #9178c1,
    #67a482,
    #789359
  );
  /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
  background-size: 400% 400%;
  animation: gradient 17s ease infinite;
  height: 300vh;
  margin: 0;
  height: auto;
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

.page {
  max-width: auto;
  display: flex;
  flex-direction: column;
  /* justify-content: center; */
  align-items: center;
}

header {
  margin: 1% 0 -4% 0;
  width: 90%;
  /* border: solid 2px peru; */
}

.icons {
  text-decoration: none;
  display: flex;
  align-items: center;
}

.icons img {
  margin: 0 5px 0 5px;
}

.linkedin_icon {
  width: 40px;
  transition: 0.2s;
}

.linkedin_icon:hover {
  transform: scale(1.2);
  filter: invert(27%) brightness(1000%) contrast(100%);
}

.facebok_icon {
  width: 44px;
  transition: 0.2s;
}

.facebok_icon:hover {
  transform: scale(1.2);
  filter: invert(27%) brightness(1000%) contrast(100%);
}

.github_icon {
  width: 44px;
  transition: 0.2s;
}

.github_icon:hover {
  transform: scale(1.2);
  filter: invert(27%) brightness(1000%) contrast(100%);
}

.content {
  border: 2px dashed rgb(111, 111, 111);
  width: 90%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 5% 0;
  overflow: hidden;
  font-family: "Raleway", sans-serif;
}
.content2 {
  width: 92%;
  padding: 1%;
}

.names {
  width: 500px;
  text-align: center;
  padding: 20px;
}
.klik {
  text-align: center;
  padding: 20px;
}
.projects {
  width: auto;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: 50px;
  width: 100%;
  text-align: center;
}

.square1 {
  width: 350px;
  height: 360px;
  margin: 0 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 2px dashed rgb(111, 111, 111);
  border-radius: 15px;
}

.pic1 {
  width: 90%;
}

.pic1 img {
  width: 100%;
  transition: 0.2s;
}

.pic1 img:hover {
  width: 100%;
  transform: scale(1.08);
  border-radius: 20px;
}

button {
  padding: 15px 32px;
  text-decoration: none;
  transition-duration: 0.9s;
  border-radius: 10px;
  background-color: black;
  border: none;
  text-align: center;
  color: white;
  font-weight: 200;
  cursor: pointer;
  font-family: "Raleway", sans-serif;
  transition: 0.2s;
}
button:hover {
  background: linear-gradient(-45deg, #bed6a1, #71adc9, #937dc0, #6b9b8e);
  background-size: 400% 400%;
  animation: gradient 17s ease infinite;
  transform: scale(1.2);

  /* color: rgb(48, 48, 48); */
}

.descrip {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-bottom: 50px;
}

.part1 {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 90%;
  margin: 20px 20px;
}

.part1 p {
  /* justify-self: center/; */
  margin: 50px;
  width: 500px;
}

.part4 {
  display: flex;
  flex-direction: row-reverse;
  justify-content: center;
  align-items: center;
  width: 90%;
  margin: 20px 20px;
}
.part4 p {
  margin: 60px;
  width: 500px;
}

.photo {
  width: 50%;
}

.photo img {
  width: 100%;
  border-radius: 0 30px;
  transition: 0.3s;
  /* margin: 100px; */
  box-shadow: 10px 10px 5px var(--shadow-color);
  -moz-box-shadow: 10px 10px 5px var(--shadow-color);
  -webkit-box-shadow: 10px 10px 5px var(--shadow-color);
  -khtml-box-shadow: 10px 10px 5px var(--shadow-color);
}

.photo img:active {
  transform: scale(1.5);
}

.part2 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 90%;
  margin: 20px 20px;
  text-align: center;
}

.part2 p {
  width: 50%;
}

.photo1 {
  display: flex;
  flex-direction: row;
  width: 100%;
}

/* .photo1:active {
  transform: scale(1.5);
} */

.photo1 img {
  width: 100%;
  transition: 0.3s;
  border-radius: 0 30px;
  margin: 25px;
  box-shadow: 10px 10px 5px var(--shadow-color);
  -moz-box-shadow: 10px 10px 5px var(--shadow-color);
  -webkit-box-shadow: 10px 10px 5px var(--shadow-color);
  -khtml-box-shadow: 10px 10px 5px var(--shadow-color);
}

.photo1 img:active {
  transform: scale(1.5);
}

.photo_second {
  padding: 50px;
}

.photo11 {
  max-width: 60%;
  transition: 0.3s;
}

.photo11 img {
  width: 100%;
  border-radius: 0 30px;
  box-shadow: 10px 10px 5px var(--shadow-color);
  -moz-box-shadow: 10px 10px 5px var(--shadow-color);
  -webkit-box-shadow: 10px 10px 5px var(--shadow-color);
  -khtml-box-shadow: 10px 10px 5px var(--shadow-color);
}

.photo11:active {
  transform: scale(1.5);
}

.part3 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 50%;
  margin: 20px 20px;
  text-align: center;
}

.part3 img {
  max-width: 500px;
}

.home {
  margin: 20px 20px 20px 40px;
}

.exit-to-index {
  position: absolute;
  left: 40px;
  margin: 20px 0 0 0;
  transition: 0.4s;
  width: 40px;
  height: 40px;
  background-size: cover;
  background-image: url(img/corner-up-left.svg);
}

.exit-to-index:hover {
  filter: invert(27%) brightness(1000%) contrast(100%);
  transform: rotate(-360deg) scale(1.2);
}

.text-width {
  width: 80%;
}

@media screen and (max-width: 800px) {
  .photo:active {
    transform: scale(2);
  }
  .exit-to-index {
    right: -10px;
    margin: 6.5% 0 0 0;
  }
  .projects {
    flex-wrap: wrap;
  }
  .square1 {
    margin-bottom: 20px;
  }
  .names {
    width: auto;
    text-align: center;
  }
}

@media screen and (max-width: 1500px) {
  .exit-to-index {
    right: 40px;
    margin: 6.5% 1% 0 0;
  }
}

/* //////////////  Strona powitalna ////////////////////       / */

.first_page_body {
  overflow: hidden;
}

.gates {
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  left: 39%;
  top: 25%;
  width: 400px;
  height: 400px;
  font-family: "Raleway", sans-serif;
  animation: mymove 3s forwards 7s, slideup 1s 10.5s forwards;
  /* border: 2px solid peru; */
}

@keyframes mymove {
  from {
    left: 39%;
  }
  to {
    left: 19%;
  }
}

.line {
  position: relative;
  margin: 0 auto;
  /* border-right: 2px solid rgba(255, 255, 255, 0.75); */
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  /* transform: translateY(-40%); */
}

.line-1 {
  font-size: 500%;
}

/* Animation */
.anim-typewriter {
  animation: typewriter 1s steps(10) 1s 1 normal both,
    blinkTextCursor 500ms steps(10, end) infinite normal;
}
@keyframes typewriter {
  from {
    width: 0;
  }
  to {
    width: 3em;
  }
}
@keyframes blinkTextCursor {
  from {
    border-right-color: rgba(37, 37, 37, 0.75);
  }
  to {
    border-right-color: transparent;
  }
}

.line-2 {
  font-size: 150%;
  margin-top: 15px;
}

.anim-typewriter2 {
  animation: typewriter2 1.5s steps(15) 3.5s 1 normal both,
    blinkTextCursor 500ms steps(15) infinite normal;
}
@keyframes typewriter2 {
  from {
    width: 0;
  }
  to {
    width: 6em;
  }
}

.line-3 {
  font-size: 320%;
  margin-top: 15px;
}

.anim-typewriter3 {
  animation: typewriter3 2s steps(24) 4.9s 1 normal both,
    blinkTextCursor 500ms steps(24) infinite normal;
}
@keyframes typewriter3 {
  from {
    width: 0;
  }
  to {
    width: 6em;
  }
}

.photoCV {
  position: absolute;
  top: 25%;
  right: -130%;
  animation: slidein 3s forwards 6.8s, slideup 1s 10.5s forwards;
}

@keyframes slidein {
  from {
    right: -130%;
  }

  to {
    right: 19%;
  }
}

@keyframes slideup {
  from {
    top: 25%;
  }

  to {
    top: 13%;
  }
}

.ongate {
  position: relative;
  width: 100%;
  height: 100%;
  /* border: 2px solid peru; */
}

/* .undergates{
  position: absolute;
  text-align: center;
  top: 80%;
  right: 33%;
  border: 2px solid peru;
} */

.undergatesText {
  position: relative;
  margin: 0 auto;
  transform: translateY(2140%);
  /* border-right: 2px solid rgba(255, 255, 255, 0.75); */
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  font-family: "Raleway", sans-serif;
  font-size: 140%;
}

.anim-typewriter4 {
  animation: typewriter4 2s steps(64) 11s 1 normal both,
    blinkTextCursor 500ms steps(10) infinite normal;
}

.anim-typewriter5 {
  animation: typewriter5 2s steps(64) 13s 1 normal both,
    blinkTextCursor 500ms steps(10) infinite normal;
}
.anim-typewriter6 {
  animation: typewriter6 0.5s steps(34) 14.5s 1 normal both,
    blinkTextCursor 500ms steps(10) infinite normal;
}
.anim-typewriter7 {
  animation: typewriter7 2s steps(64) 16.5s 1 normal both,
    blinkTextCursor 500ms steps(10) infinite normal;
}

/* 
.udergates_text {
  animation: typewriter4 6s steps(94) 10s 1 normal both,
} */

@keyframes typewriter4 {
  from {
    width: 0;
  }
  to {
    width: 35em;
  }
}
@keyframes typewriter5 {
  from {
    width: 0;
  }
  to {
    width: 35em;
  }
}

@keyframes typewriter6 {
  from {
    width: 0;
  }
  to {
    width: 7em;
  }
}

@keyframes typewriter7 {
  from {
    width: 0;
  }
  to {
    width: 30em;
  }
}

.undergatesButton {
  position: absolute;
  top: 90%;
  right: 44%;
  animation: slidebutton 1s forwards 0s, slidebuttonup 1s forwards 2s;
}

@keyframes slidebutton {
  from {
    top: 90%;
  }

  to {
    top: 110%;
  }
}

@keyframes slidebuttonup {
  from {
    top: 110%;
  }

  to {
    top: 90%;
  }
}

@media screen and (max-width: 1600px) {
  .photoCV img {
    height: 350;
  }

  @keyframes slideup {
    from {
      top: 25%;
    }

    to {
      top: 10%;
    }
  }

  .undergatesText {
    transform: translateY(1840%);
  }
}

/* 
body {
	background: linear-gradient(98deg, #243d66, #4d4c58, #71968f, #639b6f, #9ba566);
    background-size: 1000% 1000%;

    -webkit-animation: AnimationName 15s ease infinite;
    -moz-animation: AnimationName 15s ease infinite;
    animation: AnimationName 15s ease infinite;
}

@-webkit-keyframes AnimationName {
    0%{background-position:0% 86%}
    50%{background-position:100% 15%}
    100%{background-position:0% 86%}
}
@-moz-keyframes AnimationName {
    0%{background-position:0% 86%}
    50%{background-position:100% 15%}
    100%{background-position:0% 86%}
}
@keyframes AnimationName {
    0%{background-position:0% 86%}
    50%{background-position:100% 15%}
    100%{background-position:0% 86%}
} */
/* 
body {
    background: linear-gradient(224deg, #569282, #6b9fb7, #9a88bd, #88bd9f, #a4bd88);
    background-size: 1000% 1000%;

    -webkit-animation: AnimationName 11s ease infinite;
    -moz-animation: AnimationName 11s ease infinite;
    animation: AnimationName 11s ease infinite;
}

@-webkit-keyframes AnimationName {
    0%{background-position:61% 0%}
    50%{background-position:40% 100%}
    100%{background-position:61% 0%}
}
@-moz-keyframes AnimationName {
    0%{background-position:61% 0%}
    50%{background-position:40% 100%}
    100%{background-position:61% 0%}
}
@keyframes AnimationName {
    0%{background-position:61% 0%}
    50%{background-position:40% 100%}
    100%{background-position:61% 0%}
} */

/* body {
    background: linear-gradient(224deg, #569282, #6b9fb7, #9a88bd, #88bd9f, #a4bd88);
    background-size: 1000% 1000%;

    animation: AnimationName 11s ease infinite;
}

@keyframes AnimationName {
    0%{background-position:61% 0%}
    50%{background-position:40% 100%}
    100%{background-position:61% 0%}
} */

